--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "graphql-forester",
   "version": "1.0.0",
   "description": "node-graphql-forester",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel ./src -d ./dist",
-    "start": "npm run build && nodemon ./dist/app.js",
-    "start-prod": "npm run build node ./dist/app.js"
+    "build": "babel ./src ./app.js --out-dir ./dist",
+    "start": "SET NODE_ENV=dev && nodemon -r esm app.js",
+    "start-dev": "SET NODE_ENV=dev && node -r esm app.js",
+    "start-prod": "SET NODE_ENV=prod && node ./dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "body-parser": "^1.19.0",
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
