prod env still needs to be fixed

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel ./src ./app.js --out-dir ./dist",
+    "build": "babel --plugins transform-inline-environment-variables ./src ./app.js --out-dir ./dist",
     "start": "SET NODE_ENV=dev && nodemon -r esm app.js",
     "start-dev": "SET NODE_ENV=dev && node -r esm app.js",
-    "start-prod": "SET NODE_ENV=prod && node ./dist/app.js"
+    "start-prod": "SET NODE_ENV=prod && npm run build && node ./dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "nodemon": "^2.0.2"
   }
 }
