--- a/.babelrc
+++ b/.babelrc
@@ -8,14 +8,6 @@
         ]
     ],
     "plugins": [
-        "@babel/plugin-transform-runtime",
-        [
-            "transform-inline-environment-variables",
-            {
-                "include": [
-                    "NODE_ENV"
-                ]
-            }
-        ]
+        "@babel/plugin-transform-runtime"
     ]
 }
