--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.1"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.9.1",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
