--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.1",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0"
