--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel ./src ./app.js --out-dir ./dist",
-    "start": "NODE_ENV=dev&& nodemon -r esm app.js",
+    "build": "babel ./src ./app.ts --out-dir ./dist",
+    "start": "NODE_ENV=dev&& tsc && nodemon -r esm app.ts",
     "start-dev": "SET NODE_ENV=dev&& node -r esm app.js",
     "start-prod": "SET NODE_ENV=prod&& node ./dist/app.js --MONGO_USER=$MONGO_USER --MONGO_PASSWORD=$MONGO_PASSWORD --MONGO_CLUSTER=$MONGO_CLUSTER --MONGO_DB=$MONGO_DB"
   },
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
+    "gridfs-storage-engine": "^0.2.4",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
@@ -45,8 +46,20 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/runtime": "^7.8.4",
-    "@types/node": "^14.0.14",
-    "nodemon": "^2.0.2",
-    "typescript": "^3.9.5"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.7",
+    "@types/express": "github:types/express",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.7.36",
+    "@types/multer": "^1.4.4",
+    "@types/multer-gridfs-storage": "^4.0.1",
+    "@types/node": "^14.6.3",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   }
 }
