--- a/config/.env.dev
+++ b/config/.env.dev
@@ -1,4 +1,11 @@
+PORT=3000
 MONGO_USER=gyomber32
 MONGO_PASSWORD=source32
-MONGO_CLUSTER=cluster0-rpz3d.mongodb.net
-MONGO_DB=forester
+MONGO_URI=mongodb+srv://gyomber32:source32@cluster0-rpz3d.mongodb.net
+DATABASE=forester
+ACCESS_TOKEN_SECRET=hatalmashatcentispenisz
+# 120 seconds
+ACCESS_TOKEN_LIFE=120
+REFRESH_TOKEN_SECRET=attackofthetwoinch
+# 24 hours
+REFRESH_TOKEN_LIFE=86400
