--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel ./src ./app.ts --out-dir ./dist",
-    "start": "NODE_ENV=dev&& tsc && nodemon -r esm app.ts",
-    "start-dev": "SET NODE_ENV=dev&& node -r esm app.js",
-    "start-prod": "SET NODE_ENV=prod&& node ./dist/app.js --MONGO_USER=$MONGO_USER --MONGO_PASSWORD=$MONGO_PASSWORD --MONGO_CLUSTER=$MONGO_CLUSTER --MONGO_DB=$MONGO_DB"
+    "start": "tsc && cross-env NODE_ENV=dev nodemon -r esm app.ts",
+    "start-stage": "cross-env NODE_ENV=stage && node -r esm app.js",
+    "start-prod": "SET NODE_ENV=prod && node ./dist/app.js --MONGO_USER=$MONGO_USER --MONGO_PASSWORD=$MONGO_PASSWORD --MONGO_CLUSTER=$MONGO_CLUSTER --MONGO_DB=$MONGO_DB"
   },
   "repository": {
     "type": "git",
@@ -21,16 +21,19 @@
   },
   "homepage": "https://github.com/gyomber32/node-graphql-forester#readme",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
+    "graphql-server-express": "^1.4.1",
     "gridfs-storage-engine": "^0.2.4",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
@@ -50,7 +53,6 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
     "@types/express": "github:types/express",
-    "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
